<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/report_container"
    tools:context=".ui.home.HomeFragment">

<FrameLayout
    android:id="@+id/map_overlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>


<FrameLayout
    android:id="@+id/home_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

</FrameLayout>

    <ImageButton
        android:id="@+id/show_popwindow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/exclamation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageButton
        android:id="@+id/get_busInfo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bus_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/show_popwindow"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginTop="-15dp"
        android:layout_marginStart="-18dp"
        android:layout_marginEnd="-8dp"
        android:background="@drawable/search_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/disaster_fire_logo"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            />

        <EditText
            android:id="@+id/start_location"
            android:layout_width="280dp"
            android:layout_height="35dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="14dp"
            android:hint="Start Location"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/grey_define"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/des_location"
            android:layout_width="280dp"
            android:layout_height="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="40dp"
            android:hint="Destination Location"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/grey_define"
            android:textSize="15dp"
            android:layout_alignTop="@+id/start_location" />

        <ImageButton
            android:id="@+id/enter_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="18dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/searchbtn" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
