<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/nav_bar_map"
        android:title="@string/title_home"
        android:background="@drawable/nav_item"/>

    <item
        android:id="@+id/navigation_dashboard"
...
